@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.09 to 3.10
+* Fixed processing of device-backed loop mounts (Jari Ruusu)
 * Fixed fake error messages from rpc.rquotad (Jan Kara)
 * quota(1) now does not print info for NFS filesystems without quotas (Jan Kara)
 * XFS roothack option disabled by default (Nathan Scott)
